--- a/apps/webapp/Dockerfile
+++ b/apps/webapp/Dockerfile
@@ -40,7 +40,8 @@ FROM node:20-alpine AS runner
 
 WORKDIR /app
 
-ENV NODE_ENV=production
+# Use development mode for stable deployment
+ENV NODE_ENV=development
 ENV NEXT_TELEMETRY_DISABLED=1
 
 RUN addgroup --system --gid 1001 nodejs
