fix: install all dependencies for development mode
Development mode requires devDependencies like @types/node.
Changed from --prod to full install in runtime stage.

--- a/apps/webapp/Dockerfile
+++ b/apps/webapp/Dockerfile
@@ -62,8 +62,8 @@ COPY --from=builder --chown=nextjs:nodejs /app/apps/indexer/package.json ./apps/
 # Copy webapp
 COPY --from=builder --chown=nextjs:nodejs /app/apps/webapp ./apps/webapp
 
-# Install production dependencies
-RUN pnpm install --frozen-lockfile --prod --ignore-scripts
+# Install all dependencies for development mode
+RUN pnpm install --frozen-lockfile --ignore-scripts
 
 USER nextjs
 
